codepkg/objects/Page_Layout__mdt.object
<CustomObject>
    <fields>
        <fullName>Layout_Header_Label__c</fullName>
        <description>This field is used to display layout header title as normal label field has limit of 40 characters.</description>
        <label>Layout Header Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Page_Template_Config__c</fullName>
        <label>Page Template Config</label>
        <referenceTo>Page_Template_Config__mdt</referenceTo>
        <relationshipName>Page_Layouts</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Redirect_To_Previous__c</fullName>
        <label>Redirect To Previous</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_To__c</fullName>
        <label>Redirect To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_Type__c</fullName>
        <label>Redirect Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>URL</fullName>
                    <default>true</default>
                    <label>URL</label>
                </value>
                <value>
                    <fullName>Page Layout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Render_Criteria__c</fullName>
        <label>Render Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SObject__c</fullName>
        <label>SObject</label>
        <referenceTo>SObject__mdt</referenceTo>
        <relationshipLabel>Page Layouts</relationshipLabel>
        <relationshipName>Page_Layouts</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Page Layout Config</label>
    <pluralLabel>Page Layouts</pluralLabel>
</CustomObject>